# pocketmonsters

./: .gitignore  BUILDING.MD  CMakeLists.txt  README.md  build.sh  codepoints.sh  xxd.sh
cmake/: alsa.cmake  boost.cmake  cbor.cmake  clay.cmake  drm.cmake  flac.cmake  gcrypt.cmake  gme.cmake  gpg-error.cmake  gsf.cmake  hidapi.cmake  musl.cmake  ogg.cmake  opus.cmake  opusfile.cmake  raylib.cmake  rime.cmake  sdl-image.cmake  sdl-mixer.cmake  sdl.cmake  sodium.cmake  tmx.cmake  usb.cmake  xml2.cmake  zint.cmake  zxing.cmake
src/: external.c  includes.c  main.c
src/audio/: audio.c  music.c
src/config/: config.c
src/core/: crypt.c  input.c
src/data/: data.c  theme.c  ui.c
src/data/cards/: regions.c
src/data/cards/intern/: intern.c  series.c
src/data/cards/intern/wotc/: script.sh  sets.c  wotc.c
src/data/cards/intern/wotc/bs/: boosters.c  bs.c  card_images.c  script.sh
src/data/cards/intern/wotc/bs/boosters/: boosters.c  out.c
src/data/cards/intern/wotc/bs/card_images/: card_images.c
src/data/cards/intern/wotc/bs/cards/: 1.c  10.c  100.c  101.c  102.c  11.c  12.c  13.c  14.c  15.c  16.c  17.c  18.c  19.c  2.c  20.c  21.c  22.c  23.c  24.c  25.c  26.c  27.c  28.c  29.c  3.c  30.c  31.c  32.c  33.c  34.c  35.c  36.c  37.c  38.c  39.c  4.c  40.c  41.c  42.c  (+64 more)
src/data/cards/intern/wotc/bs2/boosters/: boosters.c
src/data/cards/intern/wotc/bs2/images/: images.c
src/data/cards/intern/wotc/fo/boosters/: boosters.c
src/data/music/: generate.sh  music.c
src/data/music/gbc/: blue_gbs.gbs  card2_gbs.gbs  card_gbs.gbs  crystal1_gbs.gbs  crystal2_gbs.gbs  crystal_gbs.gbs  gold1_gbs.gbs  gold_gbs.gbs  green_gbs.gbs  pinball_gbs.gbs  puzzle_gbs.gbs  red_gbs.gbs  silver1_gbs.gbs  silver_gbs.gbs  yellow_gbs.gbs
src/data/theme/: background.c
src/enums/: config.c  database.c  enums.c  font.c  input.c  mouse.c  music.c  pokemon_names.c  state.c  themes.c  ui.c
src/enums/music/: pmcg2.c  yellow.c
src/font/: INFO.MD  font.c  generate.sh
src/font/fonts/: ch.c  en.c  fonts.c  jp.c  kr.c  sc.c
src/image/: image.c
src/input/: gamepad.c  input.c  keyboard.c  mouse.c
src/mouse/: mouse.c
src/mouse/images/: generate.sh
src/player/: player.c
src/save/: load.c  save (Copy).c  save.c
src/state/: state.c
src/state/title/: title.c
src/strings/: cards.c  codepoints.c  keyboard.c  pokemon_names.c  strings.c  title.c
src/structs/: battle.c  cards.c  config.c  data.c  input.c  player.c  structs.c  themes.c  ui.c
src/test/: test.c
src/theme/: theme.c
src/ui/: codepoint.sh  keyboard.c  old.c  ui.c
src/window/: window.c
(+16 files in other folders)
